--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "seed": "prisma db seed"
-
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -39,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,9 +54,10 @@
     "next": "15.3.4",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "puppeteer": "^24.22.3",
+    "react": "^19.1.1",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.58.1",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.3",
